--- a/flink-connector-jdbc/pom.xml
+++ b/flink-connector-jdbc/pom.xml
@@ -42,6 +42,22 @@ under the License.
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-annotations</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-core</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-table-common</artifactId>
+			<version>${flink.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -60,7 +76,11 @@ under the License.
 							<shadeTestJar>true</shadeTestJar>
 							<artifactSet>
 								<excludes>
+									<exclude>org.apache.flink:flink-annotations</exclude>
+									<exclude>org.apache.flink:flink-core</exclude>
 									<exclude>org.apache.flink:flink-connector-base</exclude>
+									<exclude>org.apache.flink:flink-table-common</exclude>
+									<exclude>org.apache.flink:flink-connector-jdbc-core:tests</exclude>
 								</excludes>
 							</artifactSet>
 							<filters combine.children="append">
