[FLINK-35368] Reorganize table code

--- a/flink-connector-jdbc/pom.xml
+++ b/flink-connector-jdbc/pom.xml
@@ -145,6 +145,14 @@ under the License.
 			<scope>test</scope>
 		</dependency>
 
+		<!-- H2 tests -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
