[FLINK-35366] Bump containers and fix forkCountItCase

--- a/flink-connector-jdbc-sqlserver/pom.xml
+++ b/flink-connector-jdbc-sqlserver/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <sqlserver.version>10.2.1.jre8</sqlserver.version>
+
+        <flink.forkCountITCase>1</flink.forkCountITCase>
     </properties>
 
     <dependencies>
