--- a/flink-connector-jdbc-oceanbase/pom.xml
+++ b/flink-connector-jdbc-oceanbase/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>jdbc</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>oceanbase</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
 
 
         <!-- ArchUit test dependencies -->
