--- a/pom.xml
+++ b/pom.xml
@@ -45,14 +45,14 @@ under the License.
     <modules>
         <module>flink-connector-jdbc</module>
         <module>flink-connector-jdbc-core</module>
-        <module>flink-connector-jdbc-cratedb</module>
-        <module>flink-connector-jdbc-db2</module>
-        <module>flink-connector-jdbc-mysql</module>
-        <module>flink-connector-jdbc-oceanbase</module>
+<!--        <module>flink-connector-jdbc-cratedb</module>-->
+<!--        <module>flink-connector-jdbc-db2</module>-->
+<!--        <module>flink-connector-jdbc-mysql</module>-->
+<!--        <module>flink-connector-jdbc-oceanbase</module>-->
         <module>flink-connector-jdbc-oracle</module>
-        <module>flink-connector-jdbc-postgres</module>
-        <module>flink-connector-jdbc-sqlserver</module>
-        <module>flink-connector-jdbc-trino</module>
+<!--        <module>flink-connector-jdbc-postgres</module>-->
+<!--        <module>flink-connector-jdbc-sqlserver</module>-->
+<!--        <module>flink-connector-jdbc-trino</module>-->
     </modules>
 
     <properties>
