--- a/.github/workflows/push_pr.yml
+++ b/.github/workflows/push_pr.yml
@@ -28,7 +28,7 @@ jobs:
   compile_and_test:
     strategy:
       matrix:
-        flink: [ 1.19-SNAPSHOT, 1.20-SNAPSHOT ]
+        flink: [ 1.19-SNAPSHOT, 1.20-SNAPSHOT, 2.0-SNAPSHOT ]
         jdk: [ '8, 11, 17, 21' ]
         include:
           - flink: 1.18-SNAPSHOT
