--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@ under the License.
 
     <modules>
         <module>flink-connector-jdbc</module>
+        <module>flink-connector-jdbc-architecture</module>
         <module>flink-connector-jdbc-core</module>
         <module>flink-connector-jdbc-cratedb</module>
         <module>flink-connector-jdbc-db2</module>
@@ -168,18 +169,6 @@ under the License.
             <scope>test</scope>
         </dependency>
 
-        <!-- ArchUit test dependencies -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-architecture-tests-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-architecture-tests-production</artifactId>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <!-- This section defines the module versions that are used if nothing else is specified. -->
@@ -212,29 +201,6 @@ under the License.
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-test-utils-junit</artifactId>
-                <version>${flink.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- Flink ArchUnit -->
-
-            <dependency>
-                <groupId>org.apache.flink</groupId>
-                <artifactId>flink-architecture-tests-base</artifactId>
-                <version>${flink.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.flink</groupId>
-                <artifactId>flink-architecture-tests-test</artifactId>
-                <version>${flink.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.flink</groupId>
-                <artifactId>flink-architecture-tests-production</artifactId>
                 <version>${flink.version}</version>
                 <scope>test</scope>
             </dependency>
